Add links to run jetty sample.